TASK-8-Deploy-Strapi-on-ECS-Fargate-using-Terraform-Monitoring/terraform/security.tf
resource "aws_security_group" "ecs" {
  name   = "ecs-strapi-sg"
  vpc_id = aws_vpc.main.id

  ingress {
    from_port   = 1337
    to_port     = 1337
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
